fix: add z-index only for opened typeahead (#468)

--- a/packages/components/src/typeahead/Typeahead.less
+++ b/packages/components/src/typeahead/Typeahead.less
@@ -3,8 +3,10 @@
 @animation-duration: 0.03s;
 
 .typeahead {
-  .input-group {
-    z-index: @zindex-popover;
+  &.open {
+    .input-group {
+      z-index: @zindex-popover;
+    }
   }
 
   .dropdown.btn-block {
